# desafio-caiena

./: README.md
api/: Dockerfile  pyproject.toml
api/api/: app.py
api/api/enums/: weather_translation_enum.py
api/api/schemas/: WeatherResponse.py
api/api/utils/: message_formater.py
api/tests/: test_weather_api.py
api/tests/resources/: weather_response.json
owm/: .coverage  README.md  pyproject.toml
owm/owm/: omw.py  owm.py
owm/tests/: test_owm.py
