[tool.poetry]
name = "owm"
version = "0.1.0"
description = ""
authors = ["raphael <raphaelcamachado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pytest = "^8.3.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.9"
httpx = "^0.27.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=owm -vv'
cov = 'coverage html'